
interface:
- new interface methods SCIPcreateRandom, SCIPfreeRandom that replace SCIPrandomCreate and SCIPrandomFree
  in the public SCIP API.
- new interface method SCIPsetRandomSeed to (re)set a random number generator seed
- added method SCIPsetProbingLPState() to install given LP state and/or norms at the current probing node

performance improvements:
- add and use RESTRICT macro for some pointers
- improved the implementation of SCIPvarGetActiveRepresentatives

SCIP version 4.0.1
==================

features
- added parsing functionality to cardinality constraint handler for CIP format
- added command line option '-o' and command 'validatesolve' in interactive shell
  to validate the solution against an external primal and dual reference value.

fixed bugs:
- fixed bug in genvbounds propagator when applying a restart after the root node
- fixed unintended behavior of interrupt signal handler inside SCIP copies
- fixed uninitialized values in SCIP's digraph data structure after calling SCIPdigraphResize()
- fixed memory leak in OSiL reader when using SOS constraints
- fixed issue related to SCIPcreateFiniteSolCopy not being able to remove all infinite fixings
- fixed issue in SCIPcopyLimits() w.r.t. soft time limit
- improved handling of infinite values in a primal solution in quadratic and nonlinear constraints
- fixed bug in dynamic resizing of hashtables and hashmaps
- fixed bug in computing violation and cut for certain nonlinear constraints when LP solution is slightly out of bounds
- added workaround for bug in primal simplex of cplex 12.7.1.0 occuring when attempting to solve LPs without rows without presolving
- fixed bug in binpacking example that might have led to doing the same branching several times
- fixed memory issue in binpacking example
- renamed parameter heuristics/completesol/maxunkownrate to heuristics/completesol/maxunknownrate
- in GAMS writer, forbid also various parenthesis characters in gams symbol names