@@ -98,6 +98,24 @@ SCIP_RETCODE SCIPbranchcandGetExternCands(
                                               *   or NULL */
    );
 
+/** gets maximal branching priority of LP branching candidates */
+extern
+int SCIPbranchcandGetLPMaxPrio(
+   SCIP_BRANCHCAND*      branchcand          /**< branching candidate storage */
+   );
+
+/** gets number of LP branching candidates with maximal branch priority */
+extern
+int SCIPbranchcandGetNPrioLPCands(
+   SCIP_BRANCHCAND*      branchcand          /**< branching candidate storage */
+   );
+
+/** gets maximal branching priority of external branching candidates */
+extern
+int SCIPbranchcandGetExternMaxPrio(
+   SCIP_BRANCHCAND*      branchcand          /**< branching candidate storage */
+   );
+
 /** gets number of external branching candidates */
 extern
 int SCIPbranchcandGetNExternCands(
